Fix alignment issue on Safari.

--- a/app/assets/stylesheets/modules/_homepage-blurb.css.scss
+++ b/app/assets/stylesheets/modules/_homepage-blurb.css.scss
@@ -6,3 +6,8 @@
     color: $primary-color;
   }
 }
+
+.homepage-blurb-text {
+  position:relative;
+  top: 30%;
+}
