--- a/app/assets/stylesheets/modules/_lay.css.scss
+++ b/app/assets/stylesheets/modules/_lay.css.scss
@@ -6,4 +6,5 @@
   position: relative;
   top: 50%;
   transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
 }
